--- a/package.json
+++ b/package.json
@@ -52,5 +52,15 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
+  },
+  "dependencies": {
+    "@carbon/grid": "10.35.0",
+    "@carbon/ibmdotcom-web-components": "1.9.0",
+    "@carbon/themes": "10.42.0",
+    "@carbon/type": "10.35.0",
+    "carbon-components": "10.43.0",
+    "carbon-web-components": "1.16.2",
+    "lit-element": "2.5.1",
+    "lit-html": "1.4.1"
   }
 }
