--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,268 +1,3 @@
 {
-  "extends": [
-    "stylelint-config-prettier"
-  ],
-  "plugins": [
-    "stylelint-prettier",
-    "stylelint-scss"
-  ],
-  "rules": {
-    "at-rule-blacklist": "OFF",
-    "at-rule-empty-line-before": null,
-    "at-rule-name-case": "lower",
-    "at-rule-name-newline-after": null,
-    "at-rule-name-space-after": "always",
-    "at-rule-no-unknown": null,
-    "at-rule-no-vendor-prefix": true,
-    "at-rule-semicolon-newline-after": "always",
-    "at-rule-semicolon-space-before": "never",
-    "at-rule-whitelist": "OFF",
-    "block-closing-brace-empty-line-before": "never",
-    "block-closing-brace-newline-after": [
-      "always",
-      {
-        "ignoreAtRules": [
-          "if",
-          "else"
-        ]
-      }
-    ],
-    "block-closing-brace-newline-before": "always-multi-line",
-    "block-closing-brace-space-after": "always-single-line",
-    "block-closing-brace-space-before": "always-single-line",
-    "block-no-empty": true,
-    "block-opening-brace-newline-after": "always-multi-line",
-    "block-opening-brace-newline-before": null,
-    "block-opening-brace-space-after": "always-single-line",
-    "block-opening-brace-space-before": "always",
-    "color-hex-case": "lower",
-    "color-hex-length": "long",
-    "color-named": "never",
-    "color-no-hex": null,
-    "color-no-invalid-hex": true,
-    "comment-empty-line-before": null,
-    "comment-no-empty": true,
-    "comment-whitespace-inside": "always",
-    "comment-word-blacklist": "OFF",
-    "custom-media-pattern": "OFF",
-    "custom-property-empty-line-before": "never",
-    "declaration-bang-space-after": "never",
-    "declaration-bang-space-before": null,
-    "declaration-block-no-duplicate-properties": true,
-    "declaration-block-no-redundant-longhand-properties": true,
-    "declaration-block-no-shorthand-property-overrides": true,
-    "declaration-block-semicolon-newline-after": "always",
-    "declaration-block-semicolon-newline-before": "never-multi-line",
-    "declaration-block-semicolon-space-after": "always-single-line",
-    "declaration-block-semicolon-space-before": "never",
-    "declaration-block-single-line-max-declarations": 1,
-    "declaration-block-trailing-semicolon": "always",
-    "declaration-colon-newline-after": null,
-    "declaration-colon-space-after": "always",
-    "declaration-colon-space-before": "never",
-    "declaration-empty-line-before": [
-      "always",
-      {
-        "except": [
-          "after-comment",
-          "first-nested"
-        ],
-        "ignore": [
-          "after-declaration"
-        ]
-      }
-    ],
-    "declaration-no-important": true,
-    "declaration-property-unit-blacklist": null,
-    "declaration-property-unit-whitelist": {
-      "font-size": [
-        "rem",
-        "%",
-        "vw"
-      ],
-      "/^animation/": [
-        "ms"
-      ],
-      "line-height": [
-        "rem"
-      ]
-    },
-    "declaration-property-value-blacklist": {
-      "/.*/": [
-        "unset"
-      ]
-    },
-    "declaration-property-value-whitelist": null,
-    "font-family-name-quotes": "always-where-recommended",
-    "font-family-no-duplicate-names": true,
-    "font-family-no-missing-generic-family-keyword": true,
-    "font-weight-notation": null,
-    "function-blacklist": "OFF",
-    "function-calc-no-unspaced-operator": true,
-    "function-comma-newline-after": "always-multi-line",
-    "function-comma-newline-before": "never-multi-line",
-    "function-comma-space-after": "always-single-line",
-    "function-comma-space-before": "never",
-    "function-linear-gradient-no-nonstandard-direction": true,
-    "function-max-empty-lines": 0,
-    "function-name-case": "lower",
-    "function-parentheses-newline-inside": "always-multi-line",
-    "function-parentheses-space-inside": "never-single-line",
-    "function-url-no-scheme-relative": null,
-    "function-url-quotes": null,
-    "function-url-scheme-blacklist": "OFF",
-    "function-url-scheme-whitelist": "OFF",
-    "function-whitelist": "OFF",
-    "function-whitespace-after": "always",
-    "indentation": null,
-    "keyframe-declaration-no-important": true,
-    "length-zero-no-unit": true,
-    "max-empty-lines": 1,
-    "max-line-length": null,
-    "max-nesting-depth": [
-      0,
-      {
-        "ignoreAtRules": [
-          "if",
-          "else",
-          "each",
-          "include",
-          "mixin"
-        ]
-      }
-    ],
-    "media-feature-colon-space-after": "always",
-    "media-feature-colon-space-before": "never",
-    "media-feature-name-blacklist": "OFF",
-    "media-feature-name-case": "lower",
-    "media-feature-name-no-unknown": true,
-    "media-feature-name-no-vendor-prefix": true,
-    "media-feature-name-whitelist": "OFF",
-    "media-feature-parentheses-space-inside": "never",
-    "media-feature-range-operator-space-after": "always",
-    "media-feature-range-operator-space-before": "always",
-    "media-query-list-comma-newline-after": "always-multi-line",
-    "media-query-list-comma-newline-before": "never-multi-line",
-    "media-query-list-comma-space-after": "always-single-line",
-    "media-query-list-comma-space-before": "never",
-    "no-descending-specificity": true,
-    "no-duplicate-at-import-rules": true,
-    "no-duplicate-selectors": true,
-    "no-empty-source": true,
-    "no-eol-whitespace": true,
-    "no-extra-semicolons": true,
-    "no-invalid-double-slash-comments": true,
-    "no-missing-end-of-source-newline": true,
-    "no-unknown-animations": true,
-    "number-leading-zero": "always",
-    "number-max-precision": 4,
-    "number-no-trailing-zeros": true,
-    "prettier/prettier": true,
-    "property-blacklist": "OFF",
-    "property-case": "lower",
-    "property-no-unknown": true,
-    "property-no-vendor-prefix": true,
-    "property-whitelist": "OFF",
-    "rule-empty-line-before": [
-      "always",
-      {
-        "except": [
-          "after-single-line-comment",
-          "first-nested"
-        ]
-      }
-    ],
-    "scss/at-else-closing-brace-newline-after": "always-last-in-chain",
-    "scss/at-else-closing-brace-space-after": "always-intermediate",
-    "scss/at-else-empty-line-before": "never",
-    "scss/at-else-if-parentheses-space-before": null,
-    "scss/at-extend-no-missing-placeholder": null,
-    "scss/at-function-named-arguments": null,
-    "scss/at-function-parentheses-space-before": null,
-    "scss/at-function-pattern": null,
-    "scss/at-if-closing-brace-newline-after": null,
-    "scss/at-if-closing-brace-space-after": null,
-    "scss/at-import-no-partial-leading-underscore": null,
-    "scss/at-import-partial-extension-blacklist": null,
-    "scss/at-import-partial-extension-whitelist": null,
-    "scss/at-mixin-argumentless-call-parentheses": null,
-    "scss/at-mixin-named-arguments": null,
-    "scss/at-mixin-parentheses-space-before": null,
-    "scss/at-mixin-pattern": null,
-    "scss/at-rule-no-unknown": true,
-    "scss/declaration-nested-properties": "never",
-    "scss/declaration-nested-properties-no-divided-groups": null,
-    "scss/dollar-variable-colon-newline-after": null,
-    "scss/dollar-variable-colon-space-after": null,
-    "scss/dollar-variable-colon-space-before": null,
-    "scss/dollar-variable-default": null,
-    "scss/dollar-variable-empty-line-before": null,
-    "scss/dollar-variable-no-missing-interpolation": true,
-    "scss/dollar-variable-pattern": null,
-    "scss/double-slash-comment-empty-line-before": null,
-    "scss/double-slash-comment-inline": "never",
-    "scss/double-slash-comment-whitespace-inside": null,
-    "scss/media-feature-value-dollar-variable": null,
-    "scss/operator-no-newline-after": null,
-    "scss/operator-no-newline-before": true,
-    "scss/operator-no-unspaced": true,
-    "scss/partial-no-import": null,
-    "scss/percent-placeholder-pattern": null,
-    "scss/selector-no-redundant-nesting-selector": true,
-    "selector-attribute-brackets-space-inside": "never",
-    "selector-attribute-operator-blacklist": null,
-    "selector-attribute-operator-space-after": "never",
-    "selector-attribute-operator-space-before": "never",
-    "selector-attribute-operator-whitelist": null,
-    "selector-attribute-quotes": "always",
-    "selector-class-pattern": null,
-    "selector-combinator-blacklist": null,
-    "selector-combinator-space-after": "always",
-    "selector-combinator-space-before": "always",
-    "selector-combinator-whitelist": null,
-    "selector-descendant-combinator-no-non-space": true,
-    "selector-id-pattern": null,
-    "selector-list-comma-newline-after": "always-multi-line",
-    "selector-list-comma-newline-before": "never-multi-line",
-    "selector-list-comma-space-after": "always-single-line",
-    "selector-list-comma-space-before": "never",
-    "selector-max-attribute": null,
-    "selector-max-class": null,
-    "selector-max-combinators": null,
-    "selector-max-compound-selectors": null,
-    "selector-max-empty-lines": null,
-    "selector-max-id": null,
-    "selector-max-specificity": null,
-    "selector-max-type": null,
-    "selector-max-universal": null,
-    "selector-nested-pattern": "OFF",
-    "selector-no-qualifying-type": null,
-    "selector-no-vendor-prefix": true,
-    "selector-pseudo-class-blacklist": "OFF",
-    "selector-pseudo-class-case": "lower",
-    "selector-pseudo-class-no-unknown": true,
-    "selector-pseudo-class-parentheses-space-inside": "never",
-    "selector-pseudo-class-whitelist": "OFF",
-    "selector-pseudo-element-blacklist": "OFF",
-    "selector-pseudo-element-case": "lower",
-    "selector-pseudo-element-colon-notation": "double",
-    "selector-pseudo-element-no-unknown": true,
-    "selector-pseudo-element-whitelist": "OFF",
-    "selector-type-case": "lower",
-    "shorthand-property-no-redundant-values": true,
-    "string-no-newline": null,
-    "string-quotes": "single",
-    "time-min-milliseconds": 100,
-    "unit-blacklist": null,
-    "unit-case": "lower",
-    "unit-no-unknown": true,
-    "unit-whitelist": null,
-    "value-keyword-case": null,
-    "value-list-comma-newline-after": "always-multi-line",
-    "value-list-comma-newline-before": "never-multi-line",
-    "value-list-comma-space-after": "always-single-line",
-    "value-list-comma-space-before": "never",
-    "value-list-max-empty-lines": 0,
-    "value-no-vendor-prefix": true
-  }
+  "extends": ["./packages/stylelint-config-ibmdotcom"]
 }
