test(e2e): introduce cypress e2e testing for tutorial steps

--- a/package.json
+++ b/package.json
@@ -8,34 +8,41 @@
     "clean": "rimraf dist",
     "lint": "eslint src",
     "lint:styles": "stylelint '**/*.{css,scss}'",
-    "start": "webpack serve --config ./config/webpack-dev.config.js"
+    "start": "webpack serve --config ./config/webpack-dev.config.js",
+    "test": "start-server-and-test 'http-server -c-1 dist --silent' 8080   'cypress run'"
   },
   "devDependencies": {
     "@actions/core": "^1.2.6",
     "@babel/core": "^7.1.2",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@webpack-cli/serve": "^1.5.2",
     "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^1.0.1",
+    "cypress": "^9.1.1",
+    "cypress-wait-until": "^1.7.2",
     "dotenv": "^8.2.0",
-    "eslint": "^4.19.1",
+    "eslint": "^8.4.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsdoc": "^30.6.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-tree-shaking": "^1.9.2",
     "eslint-restricted-globals": "^0.2.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^4.5.1",
+    "http-server": "^14.0.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "mini-css-extract-plugin": "^0.11.0",
@@ -45,6 +52,7 @@
     "prettier": "^2.1.2",
     "sass": "^1.41.0",
     "sass-loader": "^10.2.0",
+    "start-server-and-test": "^1.14.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-prettier": "^1.2.0",
