--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Close when CI Passes
     conditions:
-      - 'status-success=ci-check / lint (14.x) (pull_request)'
-      - 'status-success=test / e2e (14.x) (pull_request)'
+      - 'status-success=ci-check / lint (14.x)'
+      - 'status-success=test / e2e (14.x)'
     actions:
       close:
         message:
@@ -14,8 +14,8 @@ pull_request_rules:
   - name: Comment when CI fails
     conditions:
       - or:
-        - 'status-failure=ci-check / lint (14.x) (pull_request)'
-        - 'status-failure=test / e2e (14.x) (pull_request)'
+        - 'status-failure=ci-check / lint (14.x)'
+        - 'status-failure=test / e2e (14.x)'
     actions:
       comment:
         message:
