--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Close when CI Passes
     conditions:
-      - status-success="lint (14.x)"
-      - status-success="e2e tests (14.x)"
+      - check-success="lint"
+      - check-success="e2e tests"
     actions:
       close:
         message:
@@ -14,8 +14,8 @@ pull_request_rules:
   - name: Comment when CI fails
     conditions:
       - or:
-          - status-failure="lint (14.x)"
-          - status-failure="e2e tests (14.x)"
+        - check-failure="lint"
+        - check-failure="e2e tests"
     actions:
       comment:
         message:
