--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Close when CI Passes
     conditions:
-      - check-success="lint"
-      - check-success="e2e tests"
+      - check-success=lint
+      - check-success=e2e tests
     actions:
       close:
         message:
@@ -14,8 +14,8 @@ pull_request_rules:
   - name: Comment when CI fails
     conditions:
       - or:
-        - check-failure="lint"
-        - check-failure="e2e tests"
+        - check-failure=lint
+        - check-failure=e2e tests
     actions:
       comment:
         message:
