--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,15 +12,12 @@ jobs:
   e2e:
     name: e2e tests
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: ['14.x']
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
       - name: Install dependencies
         run: yarn install
       - name: Build project
