--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -11,17 +11,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  step-2:
+  lint:
+    name: lint
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: ['14.x']
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
       - name: Install dependencies
         run: yarn install
       - name: Build project
