--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Close when CI Passes
     conditions:
-      - 'status-success=ci-check / lint'
-      - 'status-success=test / e2e'
+      - check-success=lint
+      - check-success=e2e tests
     actions:
       close:
         message:
@@ -13,14 +13,13 @@ pull_request_rules:
         remove: ['status: needs correction']
   - name: Comment when CI fails
     conditions:
-      - 'status-failure=ci-check / lint'
-      - 'status-failure=test / e2e'
+      - check-failure=e2e tests
     actions:
       comment:
         message:
           'Hi, it looks like you are missing something. Double check your code,
           your preview URL should match the
-          [preview](https://www.ibm.com/standards/carbon/developing/web-components-tutorial/step-1#preview)
+          [corresponding step](https://www.ibm.com/standards/carbon/developing/web-components-tutorial/overview)
           in the tutorial.'
       label:
         add: ['status: needs correction']
