--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: Install dependencies
-        run: yarn install
-      - name: Build project
-        run: yarn build
+      - name: Check base branch
+        ${{ if ne(variables['Build.SourceBranchName'], 'web-components-step-5') }}:
+          - name: Install dependencies
+            run: yarn install
+          - name: Build project
+            run: yarn build
       - name: Run e2e tests
         run: yarn test
