chore(actions): testing

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,7 @@ jobs:
   e2e-on-github-page:
     name: e2e tests for the github page
     runs-on: ubuntu-20.04
-    if:
-      contains('
-        refs/heads/web-components-step-5
-      ', github.ref)
+    if: ${{ github.ref == 'refs/heads/web-components-step-5' }}
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
