--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,7 @@ jobs:
   e2e-on-github-page:
     name: e2e tests for the github page
     runs-on: ubuntu-20.04
-    if:
-      branches: 
-        - 'web-components-step-5'
+    if: github.ref == 'refs/heads/web-components-step-5' || github.event.pull_request.base.ref == 'web-components-step-5'
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
