--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,25 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  e2e-github-pages:
+    name: e2e github pages test
+    if: github.event.pull_request.base.ref == 'web-components-step-5'
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: yarn install
+      - name: Build project
+        run: yarn build
+      - name: Run e2e tests
+        run: yarn test
   e2e:
     name: e2e tests
+    if: github.event.pull_request.base.ref != 'web-components-step-5'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
