--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,8 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: yarn install
-      - name: Build project
-        run: yarn build
       - name: Run e2e tests
-        run: yarn test
+        run: cypress run --config baseUrl='https://carbon-design-system.github.io/carbon-for-ibm-dotcom-tutorial/step-4/'
   e2e:
     name: e2e tests
     if: github.event.pull_request.base.ref != 'web-components-step-5'
