--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Run cypress test
-        run: yarn cypress run --config baseUrl='https://carbon-design-system.github.io/carbon-for-ibm-dotcom-tutorial/step-4/'
+        run: yarn cypress run
   e2e:
     name: e2e tests
     if: github.event.pull_request.base.ref != 'web-components-step-5'
