--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cypress": "^9.1.1",
     "cypress-wait-until": "^1.7.2",
     "dotenv": "^8.2.0",
-    "eslint": "^8.4.1",
+    "eslint": "7.14.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^5.0.0",
@@ -61,5 +61,13 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
+  },
+  "dependencies": {
+    "@carbon/grid": "10.39.0",
+    "@carbon/ibmdotcom-web-components": "1.14.0",
+    "@carbon/themes": "10.47.0",
+    "@carbon/type": "10.38.0",
+    "carbon-components": "10.49.0",
+    "carbon-web-components": "1.19.0"
   }
 }
