--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src",
     "lint:styles": "stylelint '**/*.{css,scss}'",
     "start": "webpack serve --config ./config/webpack-dev.config.js",
-    "test": "start-server-and-test 'http-server -c-1 dist --silent' 8080   'cypress run'"
+    "test": "start-server-and-test 'http-server -c-1 dist --silent' 8080   'cypress run'",
+    "test:pages": "cypress run"
   },
   "devDependencies": {
     "@actions/core": "^1.2.6",
