--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@webpack-cli/serve": "^1.5.2",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.0.4",
-    "browser-sync": "^2.26.3",
+    "brogit wser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.2.2",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^1.0.1",
