--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ci-check": "yarn lint && yarn lint:styles",
     "clean": "rimraf dist",
     "lint": "eslint src",
-    "lint:styles": "stylelint '**/*.{css,scss}'",
+    "lint:styles": "stylelint \"**/*.{css,scss}\" --fix",
     "start": "webpack serve --config ./config/webpack-dev.config.js",
     "test": "start-server-and-test 'http-server -c-1 dist --silent' 8080   'cypress run'"
   },
