--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "postcss-loader": "4.2.0",
     "postcss-selector-parser": "^6.0.6",
     "prettier": "^2.1.2",
-    "sass": "^1.41.0",
+    "sass": "^1.51.0",
     "sass-loader": "^10.2.0",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^13.7.2",
@@ -61,5 +61,13 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
+  },
+  "dependencies": {
+    "@carbon/grid": "10.43.0",
+    "@carbon/ibmdotcom-web-components": "1.16.1",
+    "@carbon/themes": "10.53.1",
+    "@carbon/type": "10.43.1",
+    "carbon-components": "10.55.0",
+    "carbon-web-components": "1.21.0"
   }
 }
