--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
-    "assert": "^2.0.0",
-    "flat": "^5.0.2"
+    "@carbon/grid": "10.43.0",
+    "@carbon/ibmdotcom-web-components": "1.16.1",
+    "@carbon/themes": "10.53.1",
+    "@carbon/type": "10.43.1",
+    "carbon-components": "10.55.0",
+    "carbon-web-components": "1.21.0"
   }
 }
