--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "dependencies": {
     "@carbon/grid": "10.43.0",
     "@carbon/ibmdotcom-web-components": "1.16.1",
-    "@carbon/themes": "10.53.1",
+    "@carbon/themes": "^11.3.0",
     "@carbon/type": "10.43.1",
     "carbon-components": "10.55.0",
     "carbon-web-components": "1.21.0"
