--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ci-check": "yarn lint && yarn lint:styles",
     "clean": "rimraf dist",
     "lint": "eslint src",
-    "lint:styles": "stylelint **/*.{css,scss}",
+    "lint:styles": "stylelint \"src/**/*.{css,scss}\"",
     "start": "webpack serve --config ./config/webpack-dev.config.js",
     "test": "start-server-and-test 'http-server -c-1 dist --silent' 8080   'cypress run'"
   },
@@ -61,5 +61,13 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
+  },
+  "dependencies": {
+    "@carbon/grid": "10.43.0",
+    "@carbon/ibmdotcom-web-components": "1.16.1",
+    "@carbon/themes": "10.53.1",
+    "@carbon/type": "10.43.1",
+    "carbon-components": "10.55.0",
+    "carbon-web-components": "1.21.0"
   }
 }
