--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "es5",
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "endOfLine": "auto",
+  "end-of-source": "newline"
 }
