--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "eslint:recommended",
     "plugin:jsdoc/recommended"
   ],
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "plugins": ["jsdoc", "tree-shaking"],
   "rules": {
     // Handle cases where we are destructuring but may not be using the initial
