--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "carbon-for-ibm-dotcom-tutorial",
   "version": "0.0.0",
   "private": true,
+  "license" : "SEE LICENSE IN LICENSE file",
   "scripts": {
     "build": "webpack --config ./config/webpack-prod.config.js",
     "ci-check": "yarn lint && yarn lint:styles",
@@ -32,6 +33,7 @@
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^5.0.0",
+    "eslint-config-antife": "^3.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.17.3",
@@ -61,5 +63,13 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
+  },
+  "dependencies": {
+    "@carbon/grid": "10.43.0",
+    "@carbon/ibmdotcom-web-components": "1.16.1",
+    "@carbon/themes": "10.53.1",
+    "@carbon/type": "10.43.1",
+    "carbon-components": "10.55.0",
+    "carbon-web-components": "1.21.0"
   }
 }
